booking bug of +1 days overlap with existing appointment and consideration of sunday of non-working day

--- a/newbaceMIS/template/css/calendar.css
+++ b/newbaceMIS/template/css/calendar.css
@@ -1,5 +1,5 @@
 body {
-	font-family: "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
+	font-family:  Helvetica, Arial, sans-serif;
 	font-size: 83.33%;
 }
 
